--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,13 @@
+title: Shane Bunting
+description: Personal Portfolio for Shane Bunting (SB1501)
 theme: jekyll-theme-cayman
+github-username: SB1501
+
+#My Projects
+Here is a list of projects I'm working on:
+
+#My Interests
+I'm interested in the following:
+
+#Get In Touch
+sabunting@icloud.com
