--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ theme: jekyll-theme-cayman
 github-username: SB1501
 
 #My Projects
-Here is a list of projects I'm working on:
+"Here is a list of projects I'm working on"
 
 #My Interests
-I'm interested in the following:
+"I'm interested in the following"
 
 #Get In Touch
-sabunting@icloud.com
+"sabunting@icloud.com"
